test/interaction/SetInf.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals, Errors*" "Sort _3 [ at SetInf.agda:3.14-15 ] ———— Error ————————————————————————————————————————————————— error: [UnsolvedConstraints] Failed to solve the following constraints: Has PTS rule: ({_3} , funSort _3 _3) (blocked on _3) Has PTS rule: (A,_3) (blocked on _3)" nil)
((last . 1) . (agda2-goals-action '()))
